# sightline-vienna-up-2026

./: .gitignore  01_organizer_email.md  02_challenge_1_dpp_erp.md  03_challenge_2_construction_ai.md  04_logistics_and_venue.md  04_research_log.md  05_partners_jury_mentors.md  06_tech_resources.md  07_strategy.md  08_plan.md  APG_TrenchQC_Pitch.pptx  APG_TrenchVerify_Pitch.pptx  APG_TrenchVerify_Pitch_1.pptx  BACKEND_LOGIC.md  BEHIND_THE_SCENES.md  CLAUDE.md  DECISIONS.md  FOLLOW_A_PHOTO.md  HOW_IT_WORKS.md  PLAN.md  README.md  REFERENCE.md  RESEARCH.md  SPEECH.md  Sightline_Pitch.pptx  app.py  generate_ppt.py  pitch_deck.pptx  pyproject.toml
.claude/: settings.json
.github/workflows/: docs-pages.yml
.streamlit/: config.toml
PPTS/drive-download-20260516T172553Z-3-001/: oegig_ai_qc_presentation.pptx  oegig_ai_qc_with_map.pptx  ~$oegig_ai_qc_presentation.pptx
demo_fixtures/: cover_prose.json  forensics.jsonl  geomatch.csv  manifest.sqlite  readqc.jsonl  verdicts.csv
demo_fixtures/geo/: FCP_Polygons.geojson  Trenches.geojson  (+1 more)
docs/: Makefile  conf.py  features.rst  index.rst  requirements.txt  workflow.rst
scripts/: backfill_haiku_bench.py  bench_openai_on_gt.py  bench_sonnet_on_gt.py  build_pitch_deck.py  dev_map_harness.py  fp_stats.py  make_demo_fixtures.py  model_comparison_pdf.py  spike_nominatim.py  spike_qc_schema.py  spike_sonnet_vs_haiku.py  test_upload_map_geocode.py
src/: __init__.py  audit.py  audit_groundtruth.py  classify.py  cover_prose.py  forensics.py  geomatch.py  humanize.py  ingest.py  paths.py  pdf_report.py  readqc.py  report.py
(+23 files in other folders)
